	yet not all plots using that linestyle will actually contain points.
	This caused some plots with lines to be drawn as linespoints.

	* src/misc.c (lp_parse lp_use_properties): Do not set the pointflag.

	* src/plot2d.c src/plot3d.c: At the end of parsing plot options, set 
	lp_properties.pointflag based on the PLOT_STYLE_HAS_POINT flag in the
	plot_style field of the plot structure.

2007-10-19  Ethan Merritt  <merritt@u.washington.edu>

	* src/util3d.c (draw3d_line_unconditional): Check for user-defined
	line styles when choosing colors for front/back of hidden surfaces.

	* src/misc.c src/hidden3d.c: Clean up comments emphasizing that basic
	line properties must be initilized before calling lp_use_properties().

	* src/color.c (draw_color_smooth) src/graph3d.c (do_3dplot cntr3d_lines)
	src/misc.c (lp_use_properties):  Failure to initialize structure passed
	to lp_use_properties().
	Bugfix.

2007-10-17  Ethan Merritt  <merritt@u.washington.edu>

	* src/command.c (pause_command): Accept a string expression as the
	final parameter to "pause" commands.

2007-10-16  Ethan Merritt  <merritt@u.washington.edu>

	* INSTALL NEWS PORTING README configure.in configure.vms
	config/* docs/doc2texi.el docs/gpcard.tex docs/Makefile.in
	src/makefile.all src/makefile.awc src/term.h term/iris4d.trm
	term/vws.trm:

	Remove the long-obsolete IRIS4D terminal.  This terminal never was the
	preferred option even on a real IRIS4D (I had one!), and would no longer
	compile and link on SGI descendents of the IRIS4D as of 3 years ago.

	* docs/gnuplot.texi:  Sync to current gnuplot.doc

2007-10-16  Ethan Merritt  <merritt@u.washington.edu>

	* src/eval.h src/eval.c (update_gpval_variables) src/util.c (int_error)
	src/unset.c (reset_command): Maintain error state variables.
	GPVAL_ERRNO is set to a non-zero value whenever an error occurs.
	GPVAL_ERRMSG holds the corresponding error message string.
	Both are reset by the new command 'reset errors'.
