@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: graph3d.c,v 1.179 2007/10/20 03:01:27 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: graph3d.c,v 1.180 2007/10/21 04:17:22 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - graph3d.c */
@@ -1195,7 +1195,7 @@ do_3dplot(
 			else {
 			    if (prefer_line_styles && label_contours) {
 				struct lp_style_type ls = thiscontour_lp_properties;
-				lp_use_properties(&ls, ++thiscontour_lp_properties.l_type, FALSE);
+				lp_use_properties(&ls, ++thiscontour_lp_properties.l_type);
 				term_apply_lp_properties(&ls);
 			    } else {
 				(*t->linetype) (++thiscontour_lp_properties.l_type);
@@ -1872,7 +1872,7 @@ cntr3d_lines(struct gnuplot_contours *cntr, struct lp_style_type *lp)
     /* user may prefer explicit line styles */
     if (prefer_line_styles && label_contours) {
 	struct lp_style_type ls = *lp;
-	lp_use_properties(&ls, lp->l_type, FALSE);
+	lp_use_properties(&ls, lp->l_type);
 	lp = &ls;
     }
 
